# DistributedNumber

./: Makefile  README.md
DistributedNumber/: CMakeLists.txt  CartesianCoordinate.cpp  CartesianCoordinate.h  DistributedNumber.cpp  DistributedNumber.h  Distribution.cpp  Distribution.h  Makefile  ProbabilityDensityDistribution.cpp  ProbabilityDensityDistribution.h  cmake_install.cmake
DistributedNumber_Test/: CMakeLists.txt  CartesianCoordinate_Test.cpp  DistributedNumber_TestRunner.cpp  Distribution_Test.cpp  Makefile  ProbabilityDensityDistribution_Test.cpp  cmake_install.cmake
